--- a/index.html
+++ b/index.html
@@ -70,5 +70,39 @@
         <a class="btn"  href="#"target="_blank"><img src="img/carrinho.png">COMPRAR</a>
 
     </div>
+
+    <div class="container">
+        <div class="item">
+            <img src="/img/img1.jpg">
+        </div>
+        <div class="item">
+            <img src="/img/img2.jpg">
+        </div>
+        <div class="item">
+            <img src="/img/img3.jpg">
+        </div>
+        <div class="item">
+            <img src="/img/img4.jpg">
+        </div>
+        <div class="item">
+            <img src="/img/img5.jpg">
+        </div>
+        <div class="item">
+            <img src="/img/img6.jpg">
+        </div>
+        <div class="item">
+            <img src="/img/img7.jpg">
+        </div>
+        <div class="item">
+            <img src="/img/img8.jpg">
+        </div>
+        <div class="item">
+            <img src="/img/img9.jpg">
+        </div>
+        <div class="item">
+            <img src="/img/img10.jpg">
+        </div>
+    </div>
+
 </body>
 </html>
