--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 
     <!-- DESCRICAO  -->
 
-    <fieldset class="field-descricao ultimo">
-        
+    <fieldset class="field-descricao">
+
         <h4>alguma informacao</h4>
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate at sunt nulla cum. Vitae harum, dolores repudiandae quia recusandae pariatur earum. Fugit ad cumque enim obcaecati commodi recusandae optio!</p>
@@ -104,7 +104,9 @@
 
                 <!-- BARRA INFERIOR  -->
 
-                <!-- --------------------- -->
+<div class="ultimo">
+    <h3>&nbsp;</h3>
+</div>
 
                 <!-- BARRA INFERIOR  -->
 
