--- a/index.html
+++ b/index.html
@@ -36,12 +36,35 @@
 
                 <!-- AMOSTRA  -->
 
+            <div  id="medidass" class="separador">
+                <h3>Medidas</h3>
+            </div>
+
+                <!-- MEDIDA  -->
+
+    <fieldset class="field-medida">
+        <img class="medida" src="/img/medidas.png">
+    </fieldset>
+
+                <!-- MEDIDA  -->
+
+            <div  id="estampass"  class="separador">
+                <h3>Estampas</h3>
+            </div>
+
+                <!-- ESTAMPA  -->
+
+    <fieldset class="field-medida">
+        <img class="medida" src="/img/estampa.jpg">
+    </fieldset>
+
+                <!-- ESTAMPA  -->
+
             <div class="separador">
                 <h3>Imagens</h3>
             </div>
 
                 <!-- IMAGENS  -->
-
 
 <div class="container">
     <div class="item">
@@ -86,18 +109,31 @@
 
     <fieldset class="field-descricao">
 
-        <h4>alguma informacao</h4>
+        <h4>Informações sobre o produto</h4>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate at sunt nulla cum. Vitae harum, dolores repudiandae quia recusandae pariatur earum. Fugit ad cumque enim obcaecati commodi recusandae optio!</p>
-        
-        
-        <h4>alguma informacao</h4>
-
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab architecto velit aperiam voluptatem vel voluptatibus unde facilis, odio dolore non eaque corrupti omnis beatae reiciendis quis error consequuntur libero in?</p>
-
-        <h4>alguma informacao</h4>
-
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem reprehenderit vitae libero tempora temporibus voluptates accusamus hic aut, modi ea. Cupiditate quae quaerat consequuntur in expedita sunt optio necessitatibus maxime!</p>
+        <p>CALÇA CONFECCIONADA EM TECIDO RIP STOP COM PROTEÇÃO UV 50+ 70% POLIÉSTER E 30% ALGODÃO. CALÇA DE CORTE RETO TIPO ESPORTE.</p>
+        <br>
+        <p>CÓS RETO: COM 4,5 CM DE LARGURA, ABOTOADO COM BOTÃO DE MASSA DE 20 MM DE DIÃMETROS.</p>
+        <br>
+        <p>PASSADORES: COM 1,2 CM DE LARGURA E 7 CM DE COMPRIMENTO. FEITO COM DUAS COSTURAS CENTRALIZADAS, FEITO EM MÁQUINA GALONEIRA. O PASSADOR FOI REFORÇADO COM 1 TRAVETE NA PARTE SUPERIOR E 1 TRAVETE NA PARTE INFERIOR, SENDO NA QUANTIDADE DE 7 PASSADORES DISTRIBUIDOS EM TODA A CIRCUNFERÊNCIA DA CINTURA.</p>
+        <br>
+        <p>BRAGUILHA: FECHADA POR ZÍPER DE METAL, MEDINDO 15 CM PARA O TAMANHO 42, COM TRAVA DE SEGURANÇA, POSICIONADO NA BORDA INFERIOR DA BRAGUILHA.</p>
+        <br>
+        <p>BOLSO FRONTAL: 2 BOLSOS FACA PESPONTADO COM BITOLA DE 7MM, FIXADOS NA PARTE SUPERIOR DA FRENTE COM BOCA DE 17 CM DE COMPRIMENTO REFORÇADA POR TRAVESTES NAS EXTREMIDADES DA ABERTURA.</p>
+        <br>
+        <p>FORRO DO BOLSO FRONTAL: MESMA COR DA PEÇA, EM TECIDO 100% POLIÉSTER, COLOCADO NA PARTE INFERIOR DA PEÇA, COM COMPRIMENTO DE 35 CM ABAIXO DA LINHA INFERIOR DO CÓS.</p>
+        <br>
+        <p>BOLSOS TRASEIRO: 2 BOLSOS MEDINDO 16 CM DE LARGURA POR 17 CM DE COMPRIMENTO, COM FOLE DE 4 CM NAS LATERAIS, CHAPADO NA PEÇA, COM LAPELAS MEDINDO 6 CM DE COMPRIMENTO E 17 CM DE LARGURA, COM FECHAMENTO EM VELCRO DE 2,5 CM DE LAGURA E 4 CM DE COMPRIMENTO. LAPELA COM UM PUXADOR DE BORRACHA PARA FACILITAR A ABERTURA DA MESMA. NA TRASEIRA POSSUI UM REFORÇO, A UMA DISTÂNCIA DE 8 CM DA LINHA INFERIOR DO CÓS, E SE PROLONGA COM MEDIDA DE 17 CM NA LINHA DO ENTRE PERNAS COM JOGO DE CSOTURAS EM CIMA DO REFORÇO.</p>
+        <br>
+        <p>BOLSOS LATERAIS DA PERNA: 2 BOLSOS MEDINDO 18 CM DE LARGURA POR 19 CM DE COMPRIMENTO, COM FOLE DE 4 CM NAS LATERAIS, CHAPADO NA PEÇA, COM LAPELAS MEDINDO 6,5 CM COMPRIMENTO E 18 CM DE LARGURA, COM FECHAMENTO EM VELCRO DE 2,5 CM DE LAGURA E 4 CM DE COMPRIMENTO. LAPELA COM UM PUXADOR DE BORRACHA PARA FACILITAR A ABERTURA DA MESMA.
+        </p>
+        <br>
+        <p>REFORÇO DO JOELHO: COM 27 CM DE COMPRIMENTO E PROPORCIONAL AO TAMANHO DA CALÇA NA LARGURA, JOGO DE COSTURAS EM CIMA DO REFORÇO.
+        </p>
+        <br>
+        <p>LARGURA DA BOCA: DE 21,5 CM COM BAINHA DE 2 CM DE LARGURA.</p>
+        <br>
+        <p>LATERAL E GANCHO TRASEIRO EMBUTIDO: NA MÁQUINA FECHADEIRA DE BRAÇO, PARA MELHOR QUALIDADE E REFORÇO DA PEÇA.</p>
     </fieldset>
 
     </main> 
@@ -112,9 +148,9 @@
 
 <div class="botao">
 
-    <a class="btn" href="#"target="_blank"><img src="img/medida.png">MEDIDAS</a>
+    <a class="btn" href="#medidass" ><img src="img/medida.png">MEDIDAS</a>
 
-    <a class="btn"  href="#"target="_blank"><img src="img/paleta.png">ESTAMPAS</a>    
+    <a class="btn"  href="#estampass"><img src="img/paleta.png">ESTAMPAS</a>    
 
     <a class="btn"  href="#"target="_blank"><img src="img/carrinho.png">COMPRAR</a>
 
