--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
 
                 <!-- ESTAMPA  -->
 
-            <div class="separador">
+            <div class="separador-img">
                 <h3>Imagens</h3>
+                <p class="lado"><i>arraste para o lado</i>➤</p>
             </div>
 
                 <!-- IMAGENS  -->
