--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="style.css">
-    
+    <link rel="stylesheet" href="midia.css">
+
     <title>Tatical Fashion</title>
 
 </head>
@@ -112,32 +113,47 @@
 
         <h4>Informações sobre o produto</h4>
 
-        <p>CALÇA CONFECCIONADA EM TECIDO RIP STOP COM PROTEÇÃO UV 50+ 70% POLIÉSTER E 30% ALGODÃO. CALÇA DE CORTE RETO TIPO ESPORTE.</p>
+        <p>Calça Confeccionada Em Tecido Rip Stop Com Proteção Uv 50+ 70% Poliéster E 30% Algodão.</p>
         <br>
-        <p>CÓS RETO: COM 4,5 CM DE LARGURA, ABOTOADO COM BOTÃO DE MASSA DE 20 MM DE DIÃMETROS.</p>
+        <p>Calça De Corte Reto Tipo Esporte.</p>
+        <br>
+        <p>Cós Reto: Com 4,5 Cm De Largura, Abotoado Com Botão De Massa De 20 Mm De Diãmetros.</p>
         <br>
         <p>PASSADORES: COM 1,2 CM DE LARGURA E 7 CM DE COMPRIMENTO. FEITO COM DUAS COSTURAS CENTRALIZADAS, FEITO EM MÁQUINA GALONEIRA. O PASSADOR FOI REFORÇADO COM 1 TRAVETE NA PARTE SUPERIOR E 1 TRAVETE NA PARTE INFERIOR, SENDO NA QUANTIDADE DE 7 PASSADORES DISTRIBUIDOS EM TODA A CIRCUNFERÊNCIA DA CINTURA.</p>
         <br>
-        <p>BRAGUILHA: FECHADA POR ZÍPER DE METAL, MEDINDO 15 CM PARA O TAMANHO 42, COM TRAVA DE SEGURANÇA, POSICIONADO NA BORDA INFERIOR DA BRAGUILHA.</p>
+        <p>Braguilha: Fechada Por Zíper De Metal, Medindo 15 Cm Para O Tamanho 42, Com Trava De Segurança, Posicionado Na Borda Inferior Da Braguilha.</p>
         <br>
-        <p>BOLSO FRONTAL: 2 BOLSOS FACA PESPONTADO COM BITOLA DE 7MM, FIXADOS NA PARTE SUPERIOR DA FRENTE COM BOCA DE 17 CM DE COMPRIMENTO REFORÇADA POR TRAVESTES NAS EXTREMIDADES DA ABERTURA.</p>
+        <p>Bolso Frontal: 2 Bolsos Faca Pespontado Com Bitola De 7mm, Fixados Na Parte Superior Da Frente Com Boca De 17 Cm De Comprimento Reforçada Por Travestes Nas Extremidades Da Abertura.</p>
         <br>
-        <p>FORRO DO BOLSO FRONTAL: MESMA COR DA PEÇA, EM TECIDO 100% POLIÉSTER, COLOCADO NA PARTE INFERIOR DA PEÇA, COM COMPRIMENTO DE 35 CM ABAIXO DA LINHA INFERIOR DO CÓS.</p>
+        <p>Forro Do Bolso Frontal: Mesma Cor Da Peça, Em Tecido 100% Poliéster, Colocado Na Parte Inferior Da Peça, Com Comprimento De 35 Cm Abaixo Da Linha Inferior Do Cós.</p>
         <br>
-        <p>BOLSOS TRASEIRO: 2 BOLSOS MEDINDO 16 CM DE LARGURA POR 17 CM DE COMPRIMENTO, COM FOLE DE 4 CM NAS LATERAIS, CHAPADO NA PEÇA, COM LAPELAS MEDINDO 6 CM DE COMPRIMENTO E 17 CM DE LARGURA, COM FECHAMENTO EM VELCRO DE 2,5 CM DE LAGURA E 4 CM DE COMPRIMENTO. LAPELA COM UM PUXADOR DE BORRACHA PARA FACILITAR A ABERTURA DA MESMA. NA TRASEIRA POSSUI UM REFORÇO, A UMA DISTÂNCIA DE 8 CM DA LINHA INFERIOR DO CÓS, E SE PROLONGA COM MEDIDA DE 17 CM NA LINHA DO ENTRE PERNAS COM JOGO DE CSOTURAS EM CIMA DO REFORÇO.</p>
+        <p>Bolsos Traseiro: 2 Bolsos Medindo 16 Cm De Largura Por 17 Cm De Comprimento, Com Fole De 4 Cm Nas Laterais, Chapado Na Peça, Com Lapelas Medindo 6 Cm De Comprimento E 17 Cm De Largura, Com Fechamento Em Velcro De 2,5 Cm De Lagura E 4 Cm De Comprimento. Lapela Com Um Puxador De Borracha Para Facilitar A Abertura Da Mesma. Na Traseira Possui Um Reforço, A Uma Distância De 8 Cm Da Linha Inferior Do Cós, E Se Prolonga Com Medida De 17 Cm Na Linha Do Entre Pernas Com Jogo De Csoturas Em Cima Do Reforço.</p>
         <br>
-        <p>BOLSOS LATERAIS DA PERNA: 2 BOLSOS MEDINDO 18 CM DE LARGURA POR 19 CM DE COMPRIMENTO, COM FOLE DE 4 CM NAS LATERAIS, CHAPADO NA PEÇA, COM LAPELAS MEDINDO 6,5 CM COMPRIMENTO E 18 CM DE LARGURA, COM FECHAMENTO EM VELCRO DE 2,5 CM DE LAGURA E 4 CM DE COMPRIMENTO. LAPELA COM UM PUXADOR DE BORRACHA PARA FACILITAR A ABERTURA DA MESMA.
+        <p>Bolsos Laterais Da Perna: 2 Bolsos Medindo 18 Cm De Largura Por 19 Cm De Comprimento, Com Fole De 4 Cm Nas Laterais, Chapado Na Peça, Com Lapelas Medindo 6,5 Cm Comprimento E 18 Cm De Largura, Com Fechamento Em Velcro De 2,5 Cm De Lagura E 4 Cm De Comprimento. Lapela Com Um Puxador De Borracha Para Facilitar A Abertura Da Mesma.
         </p>
         <br>
-        <p>REFORÇO DO JOELHO: COM 27 CM DE COMPRIMENTO E PROPORCIONAL AO TAMANHO DA CALÇA NA LARGURA, JOGO DE COSTURAS EM CIMA DO REFORÇO.
+        <p>Reforço Do Joelho: Com 27 Cm De Comprimento E Proporcional Ao Tamanho Da Calça Na Largura, Jogo De Costuras Em Cima Do Reforço.
         </p>
         <br>
-        <p>LARGURA DA BOCA: DE 21,5 CM COM BAINHA DE 2 CM DE LARGURA.</p>
+        <p>Largura Da Boca: De 21,5 Cm Com Bainha De 2 Cm De Largura.</p>
         <br>
-        <p>LATERAL E GANCHO TRASEIRO EMBUTIDO: NA MÁQUINA FECHADEIRA DE BRAÇO, PARA MELHOR QUALIDADE E REFORÇO DA PEÇA.</p>
+        <p>Lateral E Gancho Traseiro Embutido: Na Máquina Fechadeira De Braço, Para Melhor Qualidade E Reforço Da Peça.</p>
     </fieldset>
 
     </main> 
+
+                <!-- FOOTER  -->
+
+<footer>
+
+    <h4 style="font-size: 1.4em;" >Tatical Fashion</h4> 
+    <br>
+    <h4>Página de apresentação do produto.</h4>
+    <br>
+    <h4>Os pedidos serão feitos pelo WhatsApp.</h4>
+    <br>
+    <h4>Formas de pagamento e informações sobre entrega, serão fornecidas por WhatsApp.</h4>
+    </footer>
 
                 <!-- BARRA INFERIOR  -->
 
@@ -153,7 +169,7 @@
 
     <a class="btn"  href="#estampass"><img src="img/paleta.png">ESTAMPAS</a>    
 
-    <a class="btn"  href="#"target="_blank"><img src="img/carrinho.png">COMPRAR</a>
+    <a class="btn"  href="https://api.whatsapp.com/send?phone=5551985163550&text=Ol%C3%A1,%20estou%20interessado%20em%20uma%20cal%C3%A7a!"target=""><img src="img/carrinho.png">COMPRAR</a>
 
 </div>
 
