--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         <img class="amostra_img" src="/img/imgproduto.jpg">
         <div class="descricao">
             <h2>Calça Tática Militar</h2>
-            <p class="preco">Preço: R$ 197,90</p>
+            <p class="preco">R$ 230,00</p>
+            <p class="preco2">(a vista R$ 218,50)</p>
             <p class="menor"> ● É ideal para esportes e aventuras.</p>
             <p class="menor"> ● Qualidade e Conforto.</p>
             <p class="menor">● Resistência e Durabilidade.</p>
