--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <br>
             <h4>Os pedidos serão feitos pelo WhatsApp.</h4>
             <br>
-            <h4>Formas de pagamento e informações sobre entrega, serão fornecidas por WhatsApp.</h4>
+            <h4>Formas de pagamento e informações sobre entrega, serão fornecidos por WhatsApp.</h4>
     </footer>
 
 </body>
