--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <br>
             <p>Cós Reto: Com 4,5 Cm De Largura, Abotoado Com Botão De Massa De 20 Mm De Diãmetros.</p>
             <br>
-            <p>PASSADORES: COM 1,2 CM DE LARGURA E 7 CM DE COMPRIMENTO. FEITO COM DUAS COSTURAS CENTRALIZADAS, FEITO EM MÁQUINA GALONEIRA. O PASSADOR FOI REFORÇADO COM 1 TRAVETE NA PARTE SUPERIOR E 1 TRAVETE NA PARTE INFERIOR, SENDO NA QUANTIDADE DE 7 PASSADORES DISTRIBUIDOS EM TODA A CIRCUNFERÊNCIA DA CINTURA.</p>
+            <p>Passadores: Com 1,2 Cm De Largura E 7 Cm De Comprimento. Feito Com Duas Costuras Centralizadas, Feito Em Máquina Galoneira. O Passador Foi Reforçado Com 1 Travete Na Parte Superior E 1 Travete Na Parte Inferior, Sendo Na Quantidade De 7 Passadores Distribuidos Em Toda A Circunferência Da Cintura.</p>
             <br>
             <p>Braguilha: Fechada Por Zíper De Metal, Medindo 15 Cm Para O Tamanho 42, Com Trava De Segurança, Posicionado Na Borda Inferior Da Braguilha.</p>
             <br>
