--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         
         <div class="botao">
             <a href="https://api.whatsapp.com/send?phone=5551985163550&text=Ol%C3%A1,%20estou%20interessado%20em%20uma%20cal%C3%A7a!" 
-            target="_blank"><button><img src="img/whatsapp.png">COMPRAR</a></button> 
+            target="_blank"><button>(51) 98516-3550</a></button> 
         </div>
     </main>
 
